fix overlapping of widgets on initial load

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,8 @@ body {
       drop-shadow(0 0 25px rgba(0, 102, 255, 0.5));
   }
 }
+
+.layout {
+  opacity: 0;
+  transform: translateY(20px);
+}
